--- a/LobsterDraw/lobsterdraw.lpi
+++ b/LobsterDraw/lobsterdraw.lpi
@@ -32,7 +32,7 @@
     </RunParams>
     <RequiredPackages Count="2">
       <Item1>
-        <PackageName Value="LobsterPack"/>
+        <PackageName Value="LobsterGraphicsPack"/>
       </Item1>
       <Item2>
         <PackageName Value="LCL"/>
