--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,9 @@ LobsterGraphicsPack/lib
 
 LobsterDraw/backup
 LobsterDraw/lib
+LobsterDraw/lobsterdraw
+LobsterDraw/lobsterdraw.app/
+
+*.plist
+
+
